force-app/main/default/objects/TeamTask__c/TeamTask__c.object-meta.xml
<CustomObject>
    <label>チームタスク</label>
    <nameField>
        <label>チームタスク名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>