force-app/main/default/objects/TeamTask__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assign</relationshipName>
    <type>Lookup</type>
</CustomField>