force-app/main/default/objects/TeamTask__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>納期</label>
    <type>Date</type>
</CustomField>