force-app/main/default/objects/TeamTask__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assignee__c</columns>
    <columns>DueDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>