force-app/main/default/objects/TeamTask__c/listViews/Kanban_View.listView-meta.xml
<ListView>
    <fullName>Kanban_View</fullName>
    <columns>NAME</columns>
    <columns>Assignee__c</columns>
    <columns>DueDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Kanbanビュー</label>
</ListView>